# genie_sim

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT_NOTES.md  LICENSE  README.md  requirements.txt  requirements_infer.txt
source/data_collection/: .gitignore  AGENTS.md  README.md  TASK_CONFIG_GUIDE.md  __init__.py  dockerfile  pyproject.toml  requirements.txt
source/data_collection/client/agent/: base.py  omniagent.py
source/data_collection/client/layout/: layout_generate.py  object.py  task_generate.py
source/data_collection/client/planner/: common.py
source/data_collection/client/robot/: __init__.py  client.py  omni_robot.py  utils.py
source/data_collection/common/base_utils/: cv_bridge_compat.py  logger.py  name_utils.py  noise_utils.py  transform_utils.py
source/data_collection/common/data_filter/: README.md  __init__.py  check_collected_data.py
source/data_collection/config/robot_cfg/: G1_omnipicker_fixed.json  G1_omnipicker_fixed_dual.json  G2_omnipicker_fixed_dual.json  robot_joint_names.json
source/data_collection/scripts/: data_collection_entrypoint.sh  data_collector_server.py  entry_point.sh  run_batch_collect.sh  run_data_collection.py  run_data_collection.sh  start_gui.sh
source/data_collection/server/: __init__.py  command_controller.py  command_enum.py  grpc_server.py  material_changer.py  robot.py  ui_builder.py  utils.py
source/data_collection/server/controllers/: kinematics_solver.py  parallel_gripper.py  ruckig_move.py
source/data_collection/server/motion_generator/: mesh_utils.py  motion_gen_reacher.py  path_filters.py
source/data_collection/server/recording/: extract_and_convert_data.py  extract_ros_bag.py  sim_data_converter.py
source/data_collection/server/ros_publisher/: base.py  camera.py  camera_info.py  camera_noiser.py  imu.py  lidar.py
source/data_collection/skills/run-data-collection/: SKILL.md
source/geniesim/: README.md  pyproject.toml
source/geniesim/app/: __init__.py  app.py  raise_standalone_sim.py  task_manager.py
source/geniesim/app/controllers/: __init__.py  api_core.py  command_controller.py  extract_ros_bag.py  kinematics_solver.py  parallel_gripper.py  ruckig_move.py
source/geniesim/app/robot_cfg/: G1_120s.json  G1_omnipicker.json  G1_omnipicker_movable.json  G1_omnipicker_old.json  G2_90d.json  G2_omnipicker.json
source/geniesim/app/ros_publisher/: base.py  camera.py  camera_info.py  lidar.py  robot_interface.py
source/geniesim/app/utils/: __init__.py  material_changer.py  robot.py  utils.py
source/geniesim/app/workflow/: __init__.py  app_launcher.py  ui_builder.py
source/geniesim/benchmark/: task_benchmark.py
source/geniesim/benchmark/config/: robot_init_pose.json  robot_init_states.py  task_config_mapping.py
source/geniesim/benchmark/envs/: __init__.py  abs_pose_env.py  base_env.py  demo_env.py  dummy_env.py  pi_env.py
source/geniesim/benchmark/hooks/: agent.py  task.py
source/geniesim/benchmark/policy/: base.py  baselinepolicy.py  demopolicy.py  pipolicy.py
source/geniesim/benchmark/tasks/: __init__.py  base_task.py  demo_task.py  dummy_task.py  llm_task.py
source/geniesim/config/: config.yaml  grasp_targets.yaml  icra_bimanual_hold_pot.yaml  icra_clean_the_desktop.yaml  icra_open_door.yaml  icra_place_block_into_box.yaml  icra_pour_workpiece.yaml  icra_scoop_popcorn.yaml  icra_sorting_packages.yaml  icra_sorting_packages_continuous.yaml  icra_stock_and_straighten_shelf.yaml  icra_take_wrong_item_shelf.yaml  if_pick_billiards_color.yaml  if_pick_block_color.yaml  if_pick_block_number.yaml  if_pick_block_shape.yaml  if_pick_block_size.yaml  if_pick_common_sense.yaml  if_pick_follow_logic_or.yaml  if_pick_object_type.yaml  if_pick_specific_object.yaml  if_straighten_object.yaml  manip_bimanual_hold_pot.yaml  manip_clean_the_desktop.yaml  manip_open_door.yaml  manip_place_block_into_box.yaml  manip_pour_workpiece.yaml  manip_scoop_popcorn.yaml  manip_sorting_packages.yaml  manip_sorting_packages_continuous.yaml  manip_stock_and_straighten_shelf.yaml  manip_take_wrong_item_shelf.yaml  organize_items.yaml  params.py  robust_pick_block_color_basegen.yaml  robust_pick_block_color_camdropgen.yaml  robust_pick_block_color_camnoisegen.yaml  robust_pick_block_color_camoccgen.yaml  robust_pick_block_color_camposgen.yaml  robust_pick_block_color_ctrlgen.yaml  (+28 more)
source/geniesim/evaluator/: __init__.py
source/geniesim/evaluator/config/: llm_config.py  llm_config.yaml
source/geniesim/evaluator/generators/: auto_score.py  eval_gen.py  instruction_gen.py
source/geniesim/evaluator/prompts/: ADER_SYSTEM_PROMPT.md  PROMPT_AUTOSCORE.txt  PROMPT_EVAL.txt
source/geniesim/evaluator/templates/: INSTRUCTION_TEMPLATE.py  VLM_TEMPLATE.py  (+1 more)
source/geniesim/generator/: .gitignore  LLM_RESULT.py  app.py  compose.yaml  helper.py  requirements.txt  scene_viewer.py  server_readme.txt
source/geniesim/layout/: task_generate.py
source/geniesim/planner/: __init__.py  manip_solver.py
source/geniesim/rl/: README.md
source/geniesim/robot/: __init__.py  genie_robot.py  utils.py
source/geniesim/teleop/: replay_state.py  teleop.py  vr_server.py
source/geniesim/utils/: __init__.py  data_courier.py  data_utils.py  eval_utils.py  fix_rotation.py  g2_ikfk_converter.py  generalization_utils.py  ikfk_utils.py  infer_post_process.py  infer_pre_process.py  logger.py  name_utils.py  object.py  ros_utils.py  system_utils.py  time_utils.py  transform_utils.py  usd_utils.py
source/geniesim_benchmark/: .gitignore  README.md  USAGE.md  pyproject.toml
source/geniesim_benchmark/skills/: README.md
source/geniesim_cli/: AGENTS.md  README.md  pyproject.toml
source/geniesim_generator/: AGENTS.md  README.md  pyproject.toml  setup.py
source/geniesim_generator/skills/: README.md
source/geniesim_ros/: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
source/geniesim_ros/skills/: README.md
source/geniesim_teleop/: AGENTS.md  README.md  pyproject.toml
source/geniesim_teleop/scripts/: autoteleop.sh  autoteleop_post_process.sh
source/geniesim_teleop/skills/: README.md
(+6529 files in other folders)
