# Thin "locator" distribution for the legacy data_collection module.
#
# Purpose: make `import data_collection` / `find_spec("data_collection")` resolve
# to this directory so `geniesim_cli`'s `autocollect` verb can locate tasks/
# the same way `geniesim benchmark` locates `geniesim_benchmark` (find_spec).
#
# Scope is deliberately minimal — this is NOT a full packaging of the module:
#   * Only the top-level `data_collection` package (this dir's __init__.py) is
#     exposed; client/ server/ common/ remain cwd-relative script imports.
#   * No dependencies are declared here (the real deps live in requirements.txt
#     and are installed inside the Docker image).
#
# Reversible: `pip uninstall geniesim-data-collection` + delete this file and
# __init__.py restores filesystem-walk discovery (the CLI falls back to it).

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geniesim-data-collection"
version = "0.0.0"
description = "Locator shim so geniesim_cli can find_spec the data_collection module."
requires-python = ">=3.10,<3.13"

[tool.setuptools]
packages = ["data_collection"]
package-dir = { "data_collection" = "." }
