[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geniesim"
dynamic = ["version"]
description = "Genie Sim — meta-package for the agent-driven simulation SDK"
requires-python = ">=3.10,<3.13"
license = {text = "MPL-2.0"}
authors = [{ name = "Genie Sim Team" }]
keywords = ["agibot", "genie", "sim", "benchmark", "isaac"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Meta-package: ships no code of its own. Required deps cover the
# **tier-1** peers — everything you need for the canonical CLI + RT
# Engine + benchmark flow. **Tier-2** peers (`geniesim_teleop`,
# `geniesim_generator`) are gated behind extras so a default
# ``pip install -e source/geniesim/`` doesn't drag in their heavy
# (VR / LLM / CUDA-ML) stacks.
# Modelled on Isaac Sim's ``isaacsim`` umbrella.
dependencies = [
    "geniesim_cli",
    "geniesim_assets",
    "geniesim_benchmark",
    "geniesim_ros",
]

[project.optional-dependencies]
# Tier-2 peers — opt-in via ``pip install -e "source/geniesim/[<extra>]"``.
teleop = ["geniesim_teleop"]
generator = ["geniesim_generator"]
world = ["geniesim_world"]
# Aggregator extras — pull in everything tier-2.
all = ["geniesim_teleop", "geniesim_generator", "geniesim_world"]
# Back-compat alias for the old `full` extra (used to mean generator only;
# now matches `all`). Prefer `[all]` in new docs.
full = ["geniesim_teleop", "geniesim_generator", "geniesim_world"]

[project.urls]
Homepage = "https://github.com/AgibotTech/genie_sim"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
