[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geniesim_generator"
dynamic = ["version"]
description = "Genie Sim — LLM-driven scene generation, MCP servers, and scene-language DSL."
requires-python = ">=3.10,<3.13"
license = {text = "MPL-2.0"}
authors = [{ name = "Genie Sim Team" }]
keywords = ["agibot", "genie", "sim", "generator", "mcp", "scene-language"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "geniesim_cli",
    "geniesim_assets",
    "jaxtyping",
    "mitsuba",
    "networkx",
    "numpy<2.0",
    "pillow",
    "pygraphviz",
    "scipy",
    "tqdm",
    "transforms3d",
    "usd-core",
]

[project.optional-dependencies]
mcp = [
    "fastmcp",
    "pydantic",
    "aiofiles",
]
rag = [
    "chromadb",
    "openai",
    "dashscope",
]
vl = [
    "torch",
    "typing-extensions",
]
full = [
    "geniesim_generator[mcp,rag,vl]",
]

[project.urls]
Homepage = "https://github.com/AgibotTech/genie_sim"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"geniesim_generator" = [
    "compose.yaml",
    "server_readme.txt",
    "config/*.json",
    "config/*.yaml",
    "scene_language/LICENSE.md",
    "scene_language/README.md",
    "server/entrypoint.sh",
    "server/mcp_config.json",
    "server/assets_searcher/download_model.sh",
    "server/mcp_text_embedding/*",
    "server/mcp_vl_embedding/*",
]
