[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geniesim_teleop"
dynamic = ["version"]
description = "Genie Sim — teleoperation distribution (VR / Pico teleop bridge, device drivers, data recording)."
requires-python = ">=3.10,<3.13"
license = {text = "MPL-2.0"}
authors = [{ name = "Genie Sim Team" }]
keywords = ["agibot", "genie", "sim", "teleop", "vr"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Full runtime dependency set (installed into the image's python).
# `rosbags.image` is an import path within the `rosbags` distribution,
# not a separate package — `rosbags` covers it.
dependencies = [
    "geniesim_cli",
    "geniesim_ros",
    "aiofiles",
    "colorama",
    "h5py",
    "numpy<2.0",
    "open3d",
    "opencv-python",
    "pynput",
    "pytz",
    "pyyaml",
    "rosbags",
    "rosbags-image",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/AgibotTech/genie_sim"

[project.scripts]
geniesim-teleop = "geniesim_teleop.teleop:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
# The `app/` tree is the prebuilt motion-control runtime (binaries, robot
# cfg, vendored site-packages) shipped verbatim with the package.
"geniesim_teleop" = [
    "LICENSE",
    "config/*.json",
    "app/**/*",
]
