<?xml version="1.0"?>
<package format="3">
  <name>geniesim_rl_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 service definitions for GeneSim RL lightweight pipeline</description>
  <maintainer email="genie-sim@agibot.com">Genie Sim Team</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
