<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_bringup</name>
  <version>3.2.0</version>
  <description>The GenieSim Bringup Package</description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <depend>rclpy</depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>genie_sim_engine</exec_depend>
  <exec_depend>genie_sim_robot_model</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
