<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_engine</name>
  <version>3.2.0</version>
  <description>Isaac Sim headless physics engine (drop-in replacement for mujoco_geniesim)</description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosgraph_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>realtime_tools</depend>
  <depend>image_transport</depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <depend>pybind11_vendor</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
