<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_moveit_plugins</name>
  <version>3.2.0</version>
  <description>
    Motion-planning plugins for MoveIt 2 — RRT-Connect + TOPP-RA,
    Relaxed IK, and Cartesian interpolation wrapped into the MoveIt 2
    plugin framework for evaluation and benchmarking against the
    Genie Sim stack.
  </description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_kinematics</depend>
  <depend>bio_ik</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
