<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_planning</name>
  <version>3.2.0</version>
  <description>
    Python tooling and scripts for the GenieSim chassis pipeline
    (teleop, navigation, follow_trajectory). The C++ four-wheel-steering
    servo and its supporting plugins/solvers/tracking-differentiator
    have moved to genie_sim_controllers (ros2_control controller form).
    This package is slated for further refactor.

    Includes LQR / discrete Riccati helpers adapted from Atsushi Sakai's
    PythonRobotics (MIT-licensed) — see THIRD_PARTY_LICENSES.md for the
    full attribution.
  </description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
