<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>genie_sim_robot_model</name>
  <version>3.2.0</version>
  <description>
    Universal robot model abstraction layer for multi-robot xacro dispatch.
    Bundles vendor robot descriptions (Franka FR3, Universal Robots UR5,
    ARX, Aloha, AgiBot Genie G2, …) — each retains its upstream license;
    see THIRD_PARTY_NOTICES for per-robot terms (Apache-2.0, BSD-3-Clause,
    UR graphical-documentation T&amp;Cs, …). The xacro dispatch layer
    itself is MPL-2.0.
  </description>
  <maintainer email="yangwendisheng@agibot.com" />
  <license file="LICENSE">Mozilla Public License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
